Corrects overflow on >1200px wide screens

--- a/css/style2.css
+++ b/css/style2.css
@@ -19,7 +19,6 @@ body {
   cursor: default;
 }
 
-/*EN ESTE CASO COMENTO EL ESTILO DEL MENU POR TRATARSE DE VARIAS LINEAS*/
 nav {
   width: 375px;
 }
@@ -33,6 +32,10 @@ nav ul {
   letter-spacing: 4px;
   line-height: 2;
   color: #a5a5a5;
+}
+.selected {
+  font-weight: 700;
+  color: black;
 }
 
 .header h1 {
@@ -842,10 +845,10 @@ footer .social-icons {
 @media only screen and (min-width: 1000px) /*and (max-width: 1920px) */
 {
   body {
-    min-width: 99vw;
+    min-width: 100%;
   }
   .header {
-    width: 98vw;
+    width: 100%;
   }
   .header h1 {
     padding: 17px 144px 16px 136px;
@@ -854,6 +857,7 @@ footer .social-icons {
   .header i {
     display: none;
   }
+  
   .header nav {
     display: contents;
   }
@@ -862,12 +866,12 @@ footer .social-icons {
     padding: 0;
     height: 100%;
     margin: -20px;
-    width: 99vw;
+    width: 100%;
     justify-content: flex-end;
   }
 
   .dropdown li {
-    color: #a5a5a5;
+    font-family: 'Open Sans';
     padding: 14px 16px;
     font-weight: 700;
     font-size: 11px;
@@ -876,6 +880,7 @@ footer .social-icons {
   }
 
   .opening h2 {
+    width: 100%;
     font-size: 49px;
     line-height: 57px;
   }
@@ -889,7 +894,7 @@ footer .social-icons {
     min-height: 800px;
   }
   .background-1 {
-    width: 98vw;
+    width: 100%;
     min-height: 594px;
     background-image: url(../images/Background.png);
     background-size: contain;
@@ -917,7 +922,7 @@ footer .social-icons {
     padding: 0 200px;
   }
   .rectangles {
-    width: 97vw;
+    width: 100%;
     padding: 21px;
   }
   .rectangles div {
@@ -1057,7 +1062,6 @@ footer .social-icons {
   }
 
   .pricing {
-    width: 97vw;
     display: flex;
     align-items: center;
   }
